# just_join

./: .gitignore  Cargo.toml  README.md  desgin.md  volex.ron
assets/shaders/: mesh_render.wgsl
assets/textures/: item_slot.psd
crates/controller/: Cargo.toml  README.md
crates/controller/examples/: one.rs  rapier3d.rs
crates/controller/src/: controller.rs  events.rs  input_map.rs  lib.rs  look.rs  rapier.rs  utils.rs
src/: chunk.rs  chunk_command.rs  chunk_generator.rs  clip_spheres.rs  collider_generator.rs  console_command.rs  inspector_egui.rs  main.rs  map_database.rs  map_generator.rs  mesh.rs  mesh_generator.rs  mesh_material.rs  palyer.rs  player_controller.rs  player_ui.rs  ray_cast.rs  sky.rs  staff.rs  voxel.rs  voxel_config.rs
src/classes/: mod.rs
world_test/: db  snap.000000000000107F
