[package]
name = "project-H"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
block-mesh = "0.2.0"
ndshape = "0.3.0"
ahash = { version = "0.7", features = ["serde"] }
futures-lite = "1.13.0"
bevy_flycam = "0.10.1"
