[package]
name = "project-H"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
block-mesh = "0.2.0"
ndshape = "0.3.0"
ahash = { version = "0.8.3", features = ["serde"] }
futures-lite = "1.13.0"
# bevy_flycam = "0.10.1"
bevy-inspector-egui = "0.19.0"
bevy_egui = "0.21.0"
sled = "0.34.7"
serde = "1.0.164"
bincode = "1.3.3"
simdnoise = "3.1.6"
bevy_rapier3d = "0.22.0"
# bevy_atmosphere = "0.6.0"

controller = { path = "crates/controller", version = "0.1.0" }


[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1

[profile.dev]
opt-level = 1